[package]
name = "bt-rust-dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bencoded = "0.3.1"
serde_bytes = "0.11.9"
sha1 = "0.10.5"
thiserror = "1.0.38"

[dev-dependencies]
pretty_assertions = "1.3.0"
