[package]
name = "bt-rust-dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
futures-util = "0.3.26"
hex = "0.4.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bencoded = "0.3.1"
serde_bytes = "0.11.9"
sha1 = "0.10.5"
thiserror = "1.0.38"
tokio = { version = "1.26.0", default_features = false, features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.26.0", features = ["io-std", "io-util"] }
